@@ -1,20 +1,28 @@
 {
   "Name": "RuneMagic",
   "Author": "fierro",
-  "Version": "0.2.0",
+  "Version": "0.7.0",
   "Description": "Adds a new magic system to the game.",
   "UniqueID": "fierro.rune_magic",
-  "UpdateKeys": [
-    "R"
-  ],
+  "UpdateKeys": [ "Nexus:15065" ],
   "EntryDll": "runemagic.dll",
   "MinimumApiVersion": "3.0.0",
   "Dependencies": [
     {
-      "UniqueID": "spacechase0.JsonAssets"
+      "UniqueID": "spacechase0.JsonAssets",
+      "IsRequired": true
     },
     {
-      "UniqueID": "spacechase0.SpaceCore"
+      "UniqueID": "spacechase0.SpaceCore",
+      "IsRequired": true
+    },
+    {
+      "UniqueID": "spacechase0.BiggerCraftables",
+      "IsRequired": true
+    },
+    {
+      "UniqueID": "Digus.ProducerFrameworkMod",
+      "IsRequired": true
     }
   ]
 }
